--- a/study-project-backend/pom.xml
+++ b/study-project-backend/pom.xml
@@ -60,6 +60,10 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.25</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
     </dependencies>
 
