添加session到Redis的限制邮件的连续发出的版本

--- a/study-project-backend/src/main/resources/application.yml
+++ b/study-project-backend/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
       smtp:
         socketFactory:
           class: javax.net.ssl.SSLSocketFactory
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+
